--- a/index.html
+++ b/index.html
@@ -139,20 +139,20 @@
                 <h3 class="subtitle1">AmongUs_Imposter#7841 = Mitchell Simon</h3>
                 <h3 class="subtitle2">anderson.#4900 = Anderson Tran</h3>
                 <h3 class="subtitle1">anthony p#9163 = Anthony Polumbo</h3>
-                <h3 class="subtitle2">Arugood#9438 = </h3>
-                <h3 class="subtitle1">Balakay26#8033 = </h3>
+                <h3 class="subtitle2">Arugood#9438 = Aryaman Gupta</h3>
+                <h3 class="subtitle1">Balakay26#8033 = Blake Duddy</h3>
                 <h3 class="subtitle2">dustypup#9061 = Ava Micheludis</h3>
                 <h3 class="subtitle1">Froggy67823#1045 = Michael Wang</h3>
-                <h3 class="subtitle2">Henry James;)#3105 = </h3>
+                <h3 class="subtitle2">Henry James;)#3105 = Andrew Jaskewicz</h3>
                 <h3 class="subtitle1">Howie.#5623 = Andrew Jaskewicz</h3>
                 <h3 class="subtitle2">LemonSteak#9649 = Advaith Busa</h3>
-                <h3 class="subtitle1">MemeofTsushima#2863 = </h3>
-                <h3 class="subtitle2">Nat &lt;3#4113 = </h3>
-                <h3 class="subtitle1">Niko.EXE#7570 = </h3>
-                <h3 class="subtitle2">RiceDoggo#5877 = </h3>
-                <h3 class="subtitle1">Creampuff#9342 = </h3>
-                <h3 class="subtitle2">ThatMemer#5724 = </h3>
-                <h3 class="subtitle1">Wechillman#6129 = </h3>
+                <h3 class="subtitle1">MemeofTsushima#2863 = Kamau Venson</h3>
+                <h3 class="subtitle2">Nat &lt;3#4113 = Natalee Kingman</h3>
+                <h3 class="subtitle1">Niko.EXE#7570 = Niko Micheludis</h3>
+                <h3 class="subtitle2">RiceDoggo#5877 = Olivia Nogan</h3>
+                <h3 class="subtitle1">Creampuff#9342 = Clare Peng</h3>
+                <h3 class="subtitle2">ThatMemer#5724 = Nick Santos</h3>
+                <h3 class="subtitle1">Wechillman#6129 = Andrew Jaskewicz</h3>
                 <h3 class="subtitle2"></h3>
                 <h3 class="subtitle1"></h3>
             </div>
