--- a/index.html
+++ b/index.html
@@ -306,6 +306,8 @@
             </div>
             <div id="nikoactionfiguregallery-content">
                 <h3 id="nikoactionfiguregallery-quit" class="blackjack-button" onclick="window.onload();">BACK</h3>
+                <h2>Welcome to Niko's Action Figure Gallery!</h2>
+                <hr>
                 <img width="320" height="240" src="nikoactionfiguregallery-1.jpg"/>
                 <img width="320" height="240" src="nikoactionfiguregallery-2.jpg"/>
                 <img width="320" height="240" src="nikoactionfiguregallery-3.jpg"/>
