--- a/index.html
+++ b/index.html
@@ -651,19 +651,22 @@
             background-color:black;
             color:white;
             position:absolute;
-            left:1024px;
-            top:170px;
+            left:80%;
+            top:27.9%;
             opacity:0.8;
         }
-        #pusheenclicker-infowindow-cost{
+        #pusheenclicker-infowindow-name{
             font-size:20px;
+        }
+        #pusheenclicker-infowindow-cost{
+            font-size:18px;
         }
         #pusheenclicker-infowindow-description{
             font-size:15px;
         }
         #center-area{
-            left:360px;
-            top:170px;
+            left:28.15%;
+            top:27.9%;
             position:absolute;
             height: 436px;
             width: 660px;
