more workers update! x4

--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
             var Merchandise = new PusheenClickerWorker("Merchandise","Make Pusheen merchandise to help spread Pusheen around",10,1100,1000,1);
             var Cartoonist = new PusheenClickerWorker("Cartoonist","Hire a cartoonist to draw Pusheens for you",100,12000,7500,1);
             var AdoptionCenter = new PusheenClickerWorker("Adoption Center","Construct a Pusheen Adoption Center to help homeless Pusheens find a home",1000,130000,115000,1);
-            var Mine = new PusheenClickerWorker("Mine","Adopt a cat to help you on your journey to get more Pusheens",10000,1400000,9500000,1);
-            var Factory = new PusheenClickerWorker("Factory","Make Pusheen merchandise to help spread Pusheen around",100000,15000000,12500000,1);
-            var Bank = new PusheenClickerWorker("Bank","Hire a cartoonist to draw Pusheens for you",1000000,160000000,150000000,1);
+            var Mine = new PusheenClickerWorker("Mine","Construct a Mine to mine for Pusheens",10000,1400000,9500000,1);
+            var Factory = new PusheenClickerWorker("Factory","Take advantage of the Industrial Revolution and manufacture Pusheens at a never before seen rate",100000,15000000,12500000,1);
+            var Bank = new PusheenClickerWorker("Bank","Build a bank to store and make more Pusheens",1000000,160000000,150000000,1);
             var WorkerList = [Cats,Merchandise,Cartoonist,AdoptionCenter,Mine,Factory,Bank];
             
             function runPusheenClicker(){
