--- a/index.html
+++ b/index.html
@@ -203,34 +203,34 @@
                     return (num/10**6).toFixed(3) + 'm';
                 }
                 else if(num > 10**9-1 && num < 10**12){
-                    return (num/10**9).toFixed(3) + 't';
+                    return (num/10**9).toFixed(3) + 'b';
                 }
                 else if(num > 10**12-1 && num < 10**15){
-                    return (num/10**12).toFixed(3) + 'q';
+                    return (num/10**12).toFixed(3) + 't';
                 }
                 else if(num > 10**15-1 && num < 10**18){
-                    return (num/10**15).toFixed(3) + 'Q';
+                    return (num/10**15).toFixed(3) + 'q';
                 }
                 else if(num > 10**18-1 && num < 10**21){
-                    return (num/10**18).toFixed(3) + 'h';
+                    return (num/10**18).toFixed(3) + 'Q';
                 }
                 else if(num > 10**21-1 && num < 10**24){
-                    return (num/10**21).toFixed(3) + 's';
+                    return (num/10**21).toFixed(3) + 'h';
                 }
                 else if(num > 10**24-1 && num < 10**27){
-                    return (num/10**24).toFixed(3) + 'o';
+                    return (num/10**24).toFixed(3) + 's';
                 }
                 else if(num > 10**27-1 && num < 10**30){
-                    return (num/10**27).toFixed(3) + 'n';
+                    return (num/10**27).toFixed(3) + 'o';
                 }
                 else if(num > 10**30-1 && num < 10**33){
-                    return (num/10**30).toFixed(3) + 'd';
+                    return (num/10**30).toFixed(3) + 'n';
                 }
                 else if(num > 10**33-1 && num < 10**36){
-                    return (num/10**33).toFixed(3) + 'u';
+                    return (num/10**33).toFixed(3) + 'd';
                 }
                 else if(num > 10**36-1 && num < 10**39){
-                    return (num/10**36).toFixed(3) + 'dd';
+                    return (num/10**36).toFixed(3) + 'u';
                 }
                 else if(num < 10**3){
                     return num;
