Aspect Ratio Patch

--- a/index.html
+++ b/index.html
@@ -870,6 +870,7 @@
             color:red;
         }
         .Worker_area{
+            background-repeat:repeat-x;
             position:relative;
             min-width:100%;
             width:auto;
