Aspect Ratio Path 2

--- a/index.html
+++ b/index.html
@@ -870,7 +870,8 @@
             color:red;
         }
         .Worker_area{
-            background-repeat:repeat-x;
+            background-repeat:no-repeat;
+            background-size: 100% 100%;
             position:relative;
             min-width:100%;
             width:auto;
