--- a/index.html
+++ b/index.html
@@ -1135,8 +1135,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+    
     <script data-ad-client="ca-pub-9835016556573506" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <title id="website-title"></title>
+    <link rel="icon" href="Pusheen_Icon.png" sizes="32x32"/>
 </head>
     <body>
         <!--<div id="surface-stuff">
