--- a/index.html
+++ b/index.html
@@ -1554,13 +1554,14 @@
                         <div id="pusheenclickercenter-credits">
                             <h2 id="center-area-title">Welcome to the Pusheen Clicker!</h2>
                             <h2 id="center-area-text">This is still a work progress. I know, it's bad but it's still in development so it MIGHT get better(it's not). But nonetheless, I hope you have a nice stay here.</h2>
-                            <h2 id="center-area-title">Current Version: Alpha 0.5 - The "To Space!" Update</h2>
+                            <h2 id="center-area-title">Current Version: Alpha 0.6 - The "Magic Doodads" Update + Christmas :D</h2>
                             <h2 id="center-area-text">
                                 Update Changelog:<br>
-                                - System that lets you keep progress even when the game gets updated(Hopefully it works)<br>
-                                - Research Implemented<br>
-                                - 10 New Workers(All Space and Far Future related!)<br>
-                                - 100% Original Background Music(Actual Original BGM coming soon, but not saying the first BGM isn't original, it's 100% Original Totally not ripped off of Undertale. You can trust me.)<br>
+                                - Added premium currency: Crystalline Unicorn Pusheens(CUPs)<br>
+                                - Magical Doodads<br>
+                                - 9 New Doodads<br>
+                                - Christmas decorations and music<br>
+                                - Doodads Research<br>
                             </h2>
                             <h2 id="center-area-title">Known Bugs:</h2>
                             <h2 id="center-area-text">
